--- a/3-21.html
+++ b/3-21.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>任务02</title>
 
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="header">
